--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>안녕하세요!</title><style>
+<html><head><meta http-equiv="Content-Type"
+			content="text/html; charset=utf-8" /><title>안녕하세요!</title><style>
 html {
 	-webkit-print-color-adjust: exact;
 }
@@ -672,10 +673,28 @@ blockquote {
 	background-image: url("data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%2216%22%20height%3D%2216%22%20viewBox%3D%220%200%2016%2016%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%3Crect%20x%3D%220.75%22%20y%3D%220.75%22%20width%3D%2214.5%22%20height%3D%2214.5%22%20fill%3D%22white%22%20stroke%3D%22%2336352F%22%20stroke-width%3D%221.5%22%2F%3E%0A%3C%2Fsvg%3E");
 }
 	
-</style></head><body><article id="fc0a1adc-a23a-4992-9b47-1184c8ce4c24" class="page sans"><header><div class="page-header-icon undefined"><span class="icon">👋🏻</span></div><h1 class="page-title">안녕하세요!</h1><p class="page-description"></p></header><div class="page-body"><div id="92a37361-5e8b-462a-a184-b0da8fe79c4f" class="column-list"><div id="f32362d0-a23e-4088-b6d2-23fbe000b4fb" style="width:50%" class="column"><p id="29f9ae42-546c-4beb-88bf-8940732cf21d" class="">
-</p></div><div id="95dfd77a-bb4d-42f3-8847-0fbc626fcb31" style="width:50%" class="column"><h1 id="82a96180-5357-430a-9c77-fd55ba5ad8d4" class=""><mark class="highlight-gray">기획, 디자인🎨<br/>프로그래밍도 하는<br/>아이디어 뱅크🤑<br/><br/></mark><mark class="highlight-default">개발자👨‍💻 장재형입니다!</mark></h1><p id="ba1d5797-b714-41d2-a5f6-18d025c13ac9" class="">
-</p><p id="73c6e861-8d88-420a-b4d6-ad76234a9a7f" class="">
-</p><h2 id="9c56ef76-7e09-42fc-b24d-a0037ec316a5" class=""><mark class="highlight-gray">강한 추진력🚀과 끈기를 바탕으로</mark><br/>도전하며 배우는 개발자가 되고 싶어요.<br/></h2><p id="17fc656c-912d-4542-b41e-d82780e4e9be" class="">
-</p><p id="daa6b9f9-5090-4937-abce-f4da45a37614" class=""><mark class="highlight-gray">(이 페이지는 PC 화면에 최적화 돼있습니다)</mark></p></div></div><p id="f7fbe491-499e-4cae-8f86-836152c53e09" class="">
-</p><p id="35959789-873a-4d56-9f2c-6c935abef7a3" class="">
-</p><p id="d3d31837-db35-46b8-8996-b43f446decdd" class=""><a href="eng_index.html"><mark class="highlight-gray"><span style="border-bottom:0.05em solid">[English version]</span></mark></a></p></body></html>
+</style></head><body><article id="fc0a1adc-a23a-4992-9b47-1184c8ce4c24"
+			class="page sans"><header><div class="page-header-icon undefined"><span
+						class="icon">👋🏻</span></div><h1 class="page-title">안녕하세요!</h1><p
+					class="page-description"></p></header><div class="page-body"><div
+					id="92a37361-5e8b-462a-a184-b0da8fe79c4f" class="column-list"><div
+						id="f32362d0-a23e-4088-b6d2-23fbe000b4fb" style="width:50%"
+						class="column"><p id="29f9ae42-546c-4beb-88bf-8940732cf21d" class>
+						</p></div><div id="95dfd77a-bb4d-42f3-8847-0fbc626fcb31" style="width:50%"
+						class="column"><h1 id="82a96180-5357-430a-9c77-fd55ba5ad8d4" class><mark
+								class="highlight-gray">기획, 디자인🎨<br />프로그래밍도 하는<br />아이디어
+								뱅크🤑<br /><br /></mark><mark class="highlight-default">개발자👨‍💻
+								장재형입니다!</mark></h1><p id="ba1d5797-b714-41d2-a5f6-18d025c13ac9" class>
+						</p><p id="73c6e861-8d88-420a-b4d6-ad76234a9a7f" class>
+						</p><h2 id="9c56ef76-7e09-42fc-b24d-a0037ec316a5" class><mark
+								class="highlight-gray">강한 추진력🚀과 끈기를 바탕으로</mark><br />도전하며 배우는 개발자가 되고
+							싶어요.<br /></h2><p id="17fc656c-912d-4542-b41e-d82780e4e9be" class>
+						</p><p id="daa6b9f9-5090-4937-abce-f4da45a37614" class><mark
+								class="highlight-gray">(이 페이지는 PC 화면에 최적화
+								돼있습니다)</mark></p></div></div><p
+					id="f7fbe491-499e-4cae-8f86-836152c53e09" class>
+				</p><p id="35959789-873a-4d56-9f2c-6c935abef7a3" class>
+				</p><p id="d3d31837-db35-46b8-8996-b43f446decdd" class><a
+						href="eng_index.html"><mark class="highlight-gray"><span
+								style="border-bottom:0.05em solid">[English
+								version]</span></mark></a></p></body></html>
